src/app/domain/pages/base/base.component.scss
.base-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
}

.sidebar {
  position: fixed;
  top: 0;
  bottom: 0;
  display: flex;
  flex-direction: column;
  min-width: 40%;
  padding-left: 30px;
}

.content {
  height: 100vh;
  display: flex;
  flex-direction: column;
  gap: 15px;
  width: 45%;
  margin-left: 44%;
}

.about-content {
  padding-top: 85px;
  pre {
    line-height: 17px;
    width: 88%;
    font-size: var(--fz-xxs);
    white-space: pre-wrap;
    color: var(--light-slate);
  }
}

@media screen and (max-width: 999px) {
  .content {
    width: 60%;
  }
  .about-content {
    padding-top: 95px;
    width: 95%;
  }
  .sidebar {
    padding-left: 0px;
    padding-right: 40px;
  }
}
@media screen and (max-width: 860px) {
  .base-container {
    flex-direction: column;
  }
  .sidebar {
    position: static;
    min-width: auto;
  }
  .content {
    width: 90%;
    margin-left: 12%;
  }
}

